ensured body covers viewport height
this is mainly to avoid the nav menu being taller than the body/contents

unfortunately, this means that the body will always be vertically
scrollable - not sure whether that's acceptable

perhaps this will change with the addition of a footer later on

--- a/layout.css
+++ b/layout.css
@@ -1,8 +1,10 @@
 html {
+	height: 100%;
 	background-color: #181818; /* adapted from Pure website */
 }
 
 body {
+	min-height: 100%;
 	margin: 1em 0 0 10em;
 	border-top-left-radius: 5px;
 	padding: 1.5em 2em;
